JS: make variable declarations have a consistent format